# haily

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  build.ps1  package-lock.json  package.json  svelte.config.js  vite.config.ts  vitest.config.ts
crates/haily-app/: Cargo.toml
crates/haily-app/src/: auto_approve.rs  bootstrap.rs  cockpit.rs  config.rs  dispatch.rs  eval.rs  launch.rs  lib.rs  mobile_admin.rs  mobile_config.rs  mobile_device_store.rs  notify.rs  reaper.rs  runs_view.rs  session_transcript.rs  test_support.rs  tests.rs  trigger.rs  turns.rs  watchers.rs
crates/haily-app/src/connector_config/: admin.rs  mod.rs  summary.rs
crates/haily-app/src/credential_store/: marker.rs  migration.rs  mod.rs  policy.rs  rpc.rs  tests.rs
crates/haily-app/src/run_control/: control.rs  launch.rs  mod.rs
crates/haily-app/src/slash_registry/: build.rs  mod.rs  resolve.rs
crates/haily-app/src/trigger/: tests.rs
crates/haily-app/tests/: connector_config.rs  credential_store.rs
crates/haily-cli/: Cargo.toml
crates/haily-cli/src/: main.rs  runtime.rs
crates/haily-core/: Cargo.toml
crates/haily-core/src/: agent.rs  approval.rs  budget.rs  coding_intent.rs  context.rs  delegate.rs  depth.rs  domains.rs  feedback_parser.rs  lib.rs  permission_mode.rs  routing.rs  specialists.rs  tag_matcher.rs  tier_intent.rs  tool_call.rs  worktree.rs
crates/haily-core/src/agent/: mod.rs  outcome.rs  stream.rs  sub_turn.rs  turn.rs
crates/haily-core/src/pipeline/: exemplar.rs  gate.rs  judge.rs  mod.rs  runner.rs  stage.rs  verifier_output.rs
crates/haily-core/src/view/: mod.rs  store.rs
crates/haily-core/tests/: automation_goldens.rs  coding_goldens.rs  feedback_parser.rs  feedback_parser_vn_eval.rs  gbnf_tool_schemas.rs  golden_tasks.rs  layering.rs  worktree.rs
crates/haily-core/tests/fixtures/: mod.rs
crates/haily-db/: Cargo.toml
crates/haily-db/migrations/: 0001_sessions.sql  0002_kms_core.sql  0003_kms_memory.sql  0004_kms_meta.sql  0005_knowledge_graph.sql  0006_calendar.sql  0007_notes.sql  0008_reminders.sql  0009_tasks.sql  0010_skills_improvements.sql  0011_work_items.sql  0012_action_journal.sql  0013_connector_manifests.sql  0014_action_journal_post_version.sql  0015_fts_trigger_corruption_fix.sql  0016_action_journal_turn_id.sql  0017_task_trace_metrics.sql  0018_daily_rollup.sql  0019_journal_manifest_hash_pin.sql  0020_rollup_approval_counts.sql  0021_cross_domain_nudge_ledger.sql  0022_work_items_deleted_at.sql  0023_calendar_recurrence_exceptions.sql  0024_coding_workspaces.sql  0025_journal_workspace_id.sql  0026_pipeline_runs.sql  0027_work_items_plan_link.sql  0028_review_findings.sql  0029_eval_runs.sql  0030_devices.sql  0031_routing_decisions.sql  0032_coding_workspaces_run_id.sql  0033_view_telemetry.sql  0034_run_events.sql  0035_skill_versions.sql  0036_pipeline_runs_resume.sql
crates/haily-db/src/: backup_maintenance.rs  lib.rs  recurrence.rs
crates/haily-db/src/queries/: calendar.rs  coding_workspaces.rs  connectors.rs  devices.rs  episodic.rs  eval_runs.rs  facts.rs  graph.rs  journal.rs  local_snapshot.rs  meta.rs  mod.rs  notes.rs  nudge_ledger.rs  pipeline_runs.rs  reminders.rs  review_findings.rs  routing_decisions.rs  run_events.rs  sessions.rs  skill_versions.rs  skills.rs  tasks.rs  view_events.rs  work_items.rs
crates/haily-db/tests/: calendar_recurrence_expansion.rs  connectors.rs  journal.rs  sessions.rs  skills.rs  work_items.rs
crates/haily-io/: Cargo.toml
crates/haily-io/src/: cli.rs  gui.rs  lib.rs  manager.rs  proactive_cards.rs  run_event.rs  slash.rs  telegram.rs
crates/haily-io/src/acp/: jsonrpc.rs  mod.rs  protocol.rs  session.rs  tests.rs
crates/haily-io/src/mobile/: bind.rs  guard.rs  mod.rs  pairing.rs  ring_buffer.rs  server.rs  tls.rs  writer.rs
crates/haily-io/tests/: mobile_server.rs
crates/haily-io/tests/mobile_server/: auth_and_resume.rs  concurrency_and_approval.rs  pairing.rs  support.rs  wire_forward_compat_guard.rs
crates/haily-kms/: Cargo.toml
crates/haily-kms/src/: authored_skills.rs  distillation.rs  embedder.rs  feedback.rs  hnsw.rs  kit_pack.rs  lib.rs  search.rs  skill_gates.rs  skills.rs  system_prompt.rs
crates/haily-kms/tests/: embedding_recall_vn.rs  feedback_downgrade.rs  forced_skill.rs  hnsw_lifecycle.rs  memory_undo.rs  outcome_label.rs  recall_relevance.rs  self_improvement.rs  skill_archival_corroboration.rs  voice_consistency.rs
crates/haily-llm/: Cargo.toml
crates/haily-llm/src/: breaker.rs  cloud.rs  escalation.rs  gbnf.rs  gpu.rs  lib.rs  llama.rs  prompt.rs  router.rs  sse.rs
crates/haily-llm/tests/: cloud_breaker.rs  cloud_stream.rs
crates/haily-mobile-client/: Cargo.toml
crates/haily-mobile-client/src/: cert_verify.rs  client.rs  codec.rs  endpoints.rs  lib.rs  reconnect.rs  tts_chunker.rs  ws.rs
crates/haily-proactive/: Cargo.toml
crates/haily-proactive/src/: cross_domain.rs  daily_rollup.rs  dnd.rs  lib.rs  morning_brief.rs  reminders.rs
crates/haily-proactive/tests/: morning_brief_synthesis.rs
crates/haily-tools/: Cargo.toml
crates/haily-tools/src/: lib.rs  security.rs  skill_fetch.rs
crates/haily-tools/tests/: calendar_undo.rs  coding.rs  http_executor_auth.rs  odoo_golden.rs  protocol_interpreter.rs  redirect_ssrf.rs  schedule_parse.rs  work_items_undo.rs
crates/haily-types/: Cargo.toml
crates/haily-types/src/: lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri-mobile/: Cargo.toml  tauri.conf.json
src-tauri-mobile/capabilities/: android.json  default.json
src-tauri-mobile/src/: bridge.rs  commands.rs  lib.rs  main.rs  pairing.rs  state.rs  vault.rs  voice.rs  voice_state.rs
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  models.rs
tauri-plugin-haily-voice/: Cargo.toml  build.rs
tauri-plugin-haily-voice/android/: build.gradle.kts
tauri-plugin-haily-voice/permissions/: default.toml
tauri-plugin-haily-voice/permissions/autogenerated/: reference.md
tauri-plugin-haily-voice/permissions/schemas/: schema.json
tauri-plugin-haily-voice/src/: commands.rs  error.rs  lib.rs  mobile.rs  models.rs
(+300 files in other folders)
