[workspace]
members = [
    "crates/haily-types",
    "crates/haily-db",
    "crates/haily-llm",
    "crates/haily-io",
    "crates/haily-kms",
    "crates/haily-tools",
    "crates/haily-core",
    "crates/haily-proactive",
    "crates/haily-app",
    "crates/haily-cli",
    "crates/haily-mobile-client",
    "src-tauri",
]
# Throwaway P0 capability-spike fixtures carry their own `[package]` manifests but are NOT
# workspace members (they are copied to scratch repos and run standalone against the local model).
# `src-tauri-mobile` (Mobile Thin-Client plan phase 3) is likewise excluded, on purpose (red team
# C2): it is its own separate Cargo workspace so a mobile-only Tauri/plugin dependency graph
# (which the CI ubuntu runner has no Android NDK for) can never break `cargo clippy --all-targets
# -D warnings` / `cargo test --workspace` for every OTHER crate. Only `haily-mobile-client`
# (above, host-compilable, haily-types + ws/tls/serde only) is a member.
exclude = ["evals", "src-tauri-mobile"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
# `rt` feature required for `tokio_util::task::TaskTracker`; `sync` (CancellationToken)
# is unconditional in tokio-util and comes along for free.
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Error handling
anyhow = "1"
thiserror = "1"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
# IDs and time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
# HTTP
reqwest = { version = "0.12", features = ["json", "stream"], default-features = false }
# OS credential store (Phase 4: keyring, NOT v4/keyring-core — see haily-app/src/credential_store.rs).
# No default features; the concrete backend feature is selected per-target in haily-app/Cargo.toml.
keyring = { version = "=3.6.2", default-features = false }
# Internal crates (path deps for workspace members that import each other)
haily-types = { path = "crates/haily-types" }
haily-db    = { path = "crates/haily-db" }
haily-llm   = { path = "crates/haily-llm" }
haily-io    = { path = "crates/haily-io" }
haily-kms   = { path = "crates/haily-kms" }
haily-tools = { path = "crates/haily-tools" }
haily-core  = { path = "crates/haily-core" }
haily-proactive = { path = "crates/haily-proactive" }
haily-app   = { path = "crates/haily-app" }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = "thin"
strip = true
