[package]
name = "haily-tauri"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "haily"
path = "src/main.rs"

[lib]
name = "haily_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
haily-core      = { path = "../crates/haily-core" }
haily-io        = { path = "../crates/haily-io" }
haily-db        = { path = "../crates/haily-db" }
haily-kms       = { path = "../crates/haily-kms" }
haily-proactive = { path = "../crates/haily-proactive" }
haily-llm  = { path = "../crates/haily-llm" }
reqwest    = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio      = { version = "1", features = ["full"] }
anyhow     = "1"
uuid       = { version = "1", features = ["v4", "serde"] }
dirs       = "5"
tracing              = "0.1"
tracing-subscriber   = { version = "0.3", features = ["env-filter"] }
