[package]
name = "haily-tauri"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "haily"
path = "src/main.rs"

[lib]
name = "haily_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
# GPU acceleration for embedded llama.cpp. Enabling one of these requires the
# matching native toolchain at build time (CUDA Toolkit / Vulkan SDK). Pass via
# `cargo tauri build --features cuda` — or use `build.ps1 -Gpu cuda`.
cuda   = ["haily-app/cuda"]
vulkan = ["haily-app/vulkan"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
haily-app  = { path = "../crates/haily-app", features = ["llama"] }
haily-io   = { path = "../crates/haily-io" }
haily-db   = { path = "../crates/haily-db" }
haily-kms  = { path = "../crates/haily-kms" }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio      = { version = "1", features = ["full"] }
anyhow     = "1"
uuid       = { version = "1", features = ["v4", "serde"] }
dirs       = "5"
tracing              = "0.1"
tracing-subscriber   = { version = "0.3", features = ["env-filter"] }
