[package]
name = "haily-app"
version.workspace = true
edition.workspace = true
description = "Shared application bootstrap, dispatch loop, and graceful shutdown — one implementation reused by CLI, headless, and Tauri GUI modes"

[dependencies]
haily-core      = { workspace = true }
haily-io        = { workspace = true }
haily-db        = { workspace = true }
haily-kms       = { workspace = true }
haily-llm       = { workspace = true }
haily-proactive = { workspace = true }
haily-tools     = { workspace = true }
haily-types     = { workspace = true }
tokio       = { workspace = true }
tokio-util  = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
dashmap     = "6"
uuid        = { workspace = true }
chrono      = { workspace = true }
keyring     = { workspace = true }
async-trait = "0.1"

[features]
default = []
# Enable embedded llama.cpp inference config fields (mirrors haily-llm/llama).
# When off, `haily-app` must still compile — the CLI's default (no-llama) build
# depends on this.
llama  = ["haily-llm/llama"]
cuda   = ["haily-llm/cuda"]
metal  = ["haily-llm/metal"]
vulkan = ["haily-llm/vulkan"]
# Desktop mobile-server config loader + device store (Mobile Thin-Client plan phase 2a) —
# forwards to `haily-io/mobile-server`, mirroring `haily-cli`'s existing `telegram` passthrough.
mobile-server = ["haily-io/mobile-server"]
# Exposes `CredentialStore::force_next_keyring_error` (mock-backend error injection) to
# EXTERNAL test crates under `tests/`. Never enabled by a production build — only via the
# self-referencing dev-dependency below, which cargo only activates for this crate's own
# tests/benches/examples.
test-support = []

[target.'cfg(windows)'.dependencies]
keyring = { workspace = true, features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { workspace = true, features = ["apple-native"] }

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
keyring = { workspace = true, features = ["sync-secret-service", "linux-native"] }

[dev-dependencies]
tempfile = "3"
# Test-only: the P6 worktree-reaper tests backdate a `coding_workspaces.updated_at` directly
# (mirrors `haily-db/tests/skills.rs`'s own row-aging idiom) — no production code in this
# crate touches sqlx directly.
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio", "chrono"] }
# Self-dependency so `tests/*.rs` integration tests (compiled as an external crate) can
# see `CredentialStore::force_next_keyring_error` behind the `test-support` feature above.
haily-app = { path = ".", features = ["test-support"] }
