[package]
name = "haily-db"
version.workspace = true
edition.workspace = true
description = "SQLite schema owner — all SQL lives here"

[dependencies]
sqlx          = { version = "0.8", features = ["sqlite", "runtime-tokio", "uuid", "chrono", "macros"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
tokio    = { workspace = true }
anyhow   = { workspace = true }
thiserror = { workspace = true }
tracing  = { workspace = true }
uuid     = { workspace = true }
chrono   = { workspace = true }
serde    = { workspace = true }
serde_json = { workspace = true }
sha2     = "0.10"
# Leaf crate — `RunEvent` is the wire/persistence contract for `queries::run_events` (phase 05,
# Unified Chat UI D2). No cycle risk: haily-types depends on nothing else in this workspace.
haily-types = { workspace = true }

[dev-dependencies]
tempfile = "3"
