[package]
name = "haily-kms"
version.workspace = true
edition.workspace = true
description = "Knowledge Management System — long-term memory, hybrid search, life context"

[features]
default = []
# fastembed downloads multilingual-e5-base ONNX model (~150 MB) on first run.
# Gate it so dev builds stay fast; enable in packaging.
embeddings = ["dep:fastembed"]

[dependencies]
haily-db   = { workspace = true }
haily-llm  = { workspace = true }
tokio      = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }
async-trait = "0.1"
hnsw_rs    = "0.3"
# Kit-pack integrity: per-file sha256 verification of the authored-skill pack (phase-02).
sha2       = "0.10"
# Precise, case/whitespace-tolerant tool-tag stripper for injected authored/fact content.
regex      = "1"
fastembed  = { version = "4", optional = true }

[dev-dependencies]
tempfile = "3"
