[package]
name = "haily-mobile-client"
version.workspace = true
edition.workspace = true
description = "Mobile Thin-Client plan phase 3: host-compilable WS client core (cert-pin TLS, envelope codec, reconnect/dedup) consumed by src-tauri-mobile — that Tauri crate lives in its OWN excluded workspace (C2), so this is the only mobile-facing crate the main workspace/CI ever compiles."

[dependencies]
haily-types = { workspace = true }
tokio        = { workspace = true }
tokio-util   = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
uuid         = { workspace = true }
futures      = { workspace = true }
sha2         = "0.10"
# `__rustls-tls` (not one of the two "batteries-included" root-store features) is the correct
# choice here: we supply our own `rustls::ClientConfig` with a custom pinned-fingerprint
# verifier (cert_verify.rs) and never want tokio-tungstenite's default webpki/native root store
# built at all — pulling either would be dead weight and, worse, a second (unused) trust path
# to reason about.
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "__rustls-tls"] }
rustls            = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pki-types  = "1"

[dev-dependencies]
rcgen = "0.13"
tokio = { workspace = true, features = ["test-util"] }
# Direct dev-dep purely so the cert-pin spike test (`cert_verify.rs`) can name `TlsAcceptor`/
# `TlsConnector` — `tokio-tungstenite`'s `__rustls-tls` feature already pulls the SAME crate
# transitively for the non-test build, so this adds no new version to resolve, only a nameable
# path for `#[cfg(test)]` code (Cargo does not expose transitive deps to `extern crate`/`use`).
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
