[package]
name = "haily-proactive"
version.workspace = true
edition.workspace = true
description = "Proactive daemon — morning brief, alerts, DND, pattern detection"

[dependencies]
haily-db    = { workspace = true }
haily-io    = { workspace = true }
tokio       = { workspace = true }
tokio-util  = { workspace = true }
tracing     = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }

[dev-dependencies]
tempfile = "3"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }
