[package]
name = "haily-tools"
version.workspace = true
edition.workspace = true
description = "Tool implementations — all tools the agent can call in V1"

[dependencies]
haily-db    = { workspace = true }
haily-kms   = { workspace = true }
haily-types = { workspace = true }
tokio      = { workspace = true }
tokio-util = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }
async-trait = "0.1"
reqwest    = { workspace = true, features = ["rustls-tls"] }
url        = "2"
# Coding tool surface (Sub-Agent + Skill Architecture phase 1): bundled content search
# (fs_grep, no external ripgrep) + glob→regex for fs_list.
regex      = "1"
# Used in production by the coding surface: ephemeral scratch roots for `code_exec`, empty
# hooks dir for `git_safe_args`.
tempfile   = "3"

[dev-dependencies]
tempfile = "3"
